--- a/style.css
+++ b/style.css
@@ -26,14 +26,14 @@
 .top__buttons {
   margin-top: 37px;
 }
-/* .top_image_button {
+.top_image_button {
   border-radius: 50px;
   background: #f25822;
   box-shadow: 4px 4px 8px 0px rgba(242, 88, 34, 0.2);
-  /* width: 140px;
+  width: 140px;
   height: 50px;
-  flex-shrink: 0; */
-} */
+  flex-shrink: 0;
+}
 .top__logos {
   margin-top: 162px;
   padding-top: 97px;
